# vizier

./: Cargo.toml  README.md  SKILL.md  vizier_spec.md
.beads/: issues.jsonl
.github/workflows/: build-release.md  build-release.yml
scripts/: install.md  install.sh
src/: diff.md  diff.rs  lib.md  lib.rs  main.md  main.rs  observation.md  observation.rs
src/observer/: common.md  common.rs  linux.md  linux.rs  macos.md  macos.rs  mod.md  mod.rs  windows.md  windows.rs
src/util/: mod.md  net.md  net.rs
tests/: cli_behavior.md  cli_behavior.rs  snapshot_schema.md  snapshot_schema.rs
