[package]
name = "vizier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
if-addrs = "0.13"
json-patch = "4"
libc = "0.2"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"
ureq = { version = "2", default-features = false, features = ["tls"] }
walkdir = "2"
whoami = "1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.25"
